tests/cli/bad-stability.wit.stderr
error: failed to process world item in `c`

Caused by:
    0: package [a:b] contains a feature gate with a version specifier, so it must have a version
            --> tests/cli/bad-stability.wit:7:14
             |
           7 |   import d:e/f-g-h@0.2.3;
             |              ^----
